hw6_lab10/tests/errors/sem_redeclare_fn.kt
// EXPECT: semantic error — duplicate function name
fun foo() { println("first") }
fun foo() { println("second") }
fun main() { foo() }
